3.13:
    * Ability to explicitly specify used 28147-89 Sbox in
      pygost.wrap.* functions

3.12:
    * Added mode argument to pygost.gost3410_vko.kek_34102012256,
      because 256-bit private keys can be used with that algorithm too
    * Fix incorrect degree sanitizing in pygost.gost3410.GOST3410Curve.exp
      preventing using of UKM=1 in @code{pygost.gost3410_vko.kek_*} functions

3.11:
    Fixed PEP247 typing stub with invalid hexdigest method.

3.10:
    Additional missing 34.11-* typing stubs.

3.9:
    Add missing 34.11-2012 PBKDF2 typing stub.

3.8:
    * 34.11-2012 based PBKDF2 function added
    * 34.13-2015 does not require double blocksized IVs

3.7:
    Fixed 34.13-2015 OFB bug with IVs longer than 2 blocks.

3.6:
    Fixed source files installation during setup.py install invocation.

3.5:
    Dummy release: added long description in package metadata.

3.4:
    Small mypy stubs related fixes.

3.3:
    * GOST3412Kuz renamed to GOST3412Kuznechik
    * GOST3412Magma implements GOST R 34.12-2015 Magma 64-bit block cipher

3.2:
    34.13-2015 block cipher modes of operation implementations.

3.1:
    Fixed mypy stubs related to PEP247-successors.

3.0:
    * gost3411_94 renamed to gost341194
    * gost3411_2012 renamed and split to gost34112012256, gost34112012512
    * GOST34112012 split to GOST34112012256, GOST34112012512
    * gost3410.kek moved to separate gost3410_vko.kek_34102001
    * VKO GOST R 34.10-2012 appeared in gost3410_vko, with test vectors
    * 34.11-94 digest is reversed, to be compatible with HMAC and
      PBKDF2 test vectors describe in TC26 documents
    * 34.11-94 PBKDF2 test vectors added
    * gost3410.prv_unmarshal, gost3410.pub_marshal, gost3410.pub_unmarshal
      helpers added, removing the need of x509 module at all
    * gost3410.verify requires (pubX, pubY) tuple, instead of two separate
      pubX, pubY arguments
    * 34.11-94 based PBKDF2 function added

2.4:
    Fixed 34.13 mypy stub.

2.3: